# oss-twin

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: security-scan.yml  test.yml
src/oss_twin/: __init__.py  __main__.py  cli.py  config.py
src/oss_twin/commands/: check_cmd.py  init_cmd.py  move_cmd.py  status_cmd.py
tests/: test_basic.py
