[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oss-twin"
version = "0.1.0"
description = "Keep a public OSS repo and its private mirror structurally aligned."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "Nader Helmy" }]
keywords = ["pre-commit", "oss", "mirror", "private", "repo"]
dependencies = ["pyyaml>=6"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/creatornader/oss-twin"
Repository = "https://github.com/creatornader/oss-twin"
Issues = "https://github.com/creatornader/oss-twin/issues"

[project.scripts]
oss-twin = "oss_twin.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]
